# bela

./: .gitignore  AGENTS.md  Makefile  README.md  bad_episodes.txt  check.py  pyproject.toml  run.sh
bela/: __init__.py  batchspec.py  train.py  train_tools.py  typ.py  util.py
bela/act_patch/: factory.py
bela/common/: __init__.py  dataloader.py  dataset.py
bela/common/datasets/: util.py
bela/common/policies/: bela.py  dummy.py  headspec.py  make.py
bela/scripts/: train.py  train_act.py  train_tools.py
scripts/: check_all_episodes.py  serve.py  train.py  visualize_gt_trajectory.py  visualize_robot_trajectory.py
tests/: test_compute_stats.py  test_dataloader.py
