[build-system]
requires = ["setuptools", "wheel", "numpy", "cython", "torch"]
build-backend = "setuptools.build_meta"
# https://docs.astral.sh/uv/concepts/projects/config/#build-systems
# https://docs.astral.sh/uv/concepts/projects/config/#build-isolation

[project]
name = "bela"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "egomimic",
    "flax>=0.10.6",
    "huggingface-hub[hf-xet]>=0.31.2",
    "iopath",
    "jax>=0.6.0",
    "numpy>=2.2.5",
    # "pytorch3d",
    "rich>=14.0.0",
    "torch>=2.6.0",
    "tyro>=0.9.20",
    "xgym",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
]
build = [ 
    "pytorch3d", 
]

[tool.uv.sources]
egomimic = { git = "https://github.com/SimarKareer/EgoMimic" }
iopath = { git = "https://github.com/facebookresearch/iopath" }
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d.git", rev = "stable" }
xgym = { path = "/home/jgoldberg/xgym", editable = true }


[tool.setuptools]
packages = ["bela"]

[tool.uv]
no-build-isolation-package = ["pytorch3d"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
ignore = [
  "F841",  # assigned but unused variable
  "F821",  # undefined name
  "E731",  # do not assign lambda
  "E722",  # do not use bare except
  "E402",  # module import not at top of file
  "E501",  # line too long
]


[tool.ruff.lint.isort]
# force-single-line = true
force-sort-within-sections = true
